ReservationController, Reservation views, Reservation models

--- a/Cinema.Web/Views/Home/Index.cshtml
+++ b/Cinema.Web/Views/Home/Index.cshtml
@@ -37,6 +37,7 @@ else
     var viewData = new ViewDataDictionary(this.ViewData)
     {
     { "showMovieDetails", true },
+    { "showReservationLink", false}
     };
 
     foreach (var screening in Model.TodayScreenings)
