--- a/Cinema.Web/Views/Reservation/Index.cshtml
+++ b/Cinema.Web/Views/Reservation/Index.cshtml
@@ -14,7 +14,7 @@
      };
 }
 
-<partial name="MovieDetailComponent" model="Model.ScreeningViewModel" view-data="viewData" />
+<partial name="ScreeningDetailComponent" model="Model.ScreeningViewModel" view-data="viewData" />
 
 <h2>Reservation details</h2>
 
