Api, movie, room, screenings controllers

--- a/Cinema.Web/Views/Reservation/Index.cshtml
+++ b/Cinema.Web/Views/Reservation/Index.cshtml
@@ -129,7 +129,7 @@
     </div>
 </form>
 
-<button id="reserveButton" class="btn btn-primary">Submit</button>
+<button id="reserveButton" class="btn btn-primary" type="submit">Submit</button>
 
 <div id="screeningId" data-screeningId="@Model.ScreeningViewModel.Id"></div>
 
